--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "node scraper.js && vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "build": "vite build",
+    "scrape": "node scraper.js",
+    "preview": "vite preview",
+    "lint": "eslint . --ext js,jsx --max-warnings 0",
+    "postinstall": "chmod -R +x node_modules/.bin || true"
   },
   "keywords": [],
   "author": "",
