change to fetch once a day, removes old crawls, added last updated in gui

--- a/.github/workflows/booli-daily.yml
+++ b/.github/workflows/booli-daily.yml
@@ -2,7 +2,7 @@ name: Booli Daily Crawl
 
 on:
   schedule:
-    - cron: "0 5,17 * * *"   # 05:00 & 17:00 UTC (~06:00 & 18:00 Sverige)
+    - cron: "0 5 * * *"   # 05:00 UTC (~06:00 Sverige)
   workflow_dispatch:
 
 jobs:
@@ -77,6 +77,6 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add booli_snapshot_*.json src/data.json
+          git add src/data.json
           git commit -m "Daily Booli snapshot" || echo "No changes"
           git push
