--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
     "fs-extra": "^11.3.3",
+    "geolib": "^3.3.4",
     "prop-types": "^15.8.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
