--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "cheerio": "^1.1.2",
     "fs-extra": "^11.3.3",
     "geolib": "^3.3.4",
+    "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-leaflet": "^5.0.0",
     "vite": "^7.3.1"
   }
 }
