--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-react": "^5.1.2",
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
+    "firebase": "^12.9.0",
     "fs-extra": "^11.3.3",
     "geolib": "^3.3.4",
     "leaflet": "^1.9.4",
