--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.7",
     "@picocss/pico": "^2.1.1",
     "@vitejs/plugin-react": "^5.1.2",
     "axios": "^1.13.2",
