--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-leaflet": "^5.0.0",
+    "react-leaflet-cluster": "^4.0.0",
     "vite": "^7.3.1"
   }
 }
