--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-ga4": "^2.1.0",
     "react-leaflet": "^5.0.0",
     "react-leaflet-cluster": "^4.0.0",
     "vite": "^7.3.1"
