--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
     "firebase": "^12.9.0",
+    "framer-motion": "^12.34.0",
     "fs-extra": "^11.3.3",
     "geolib": "^3.3.4",
     "leaflet": "^1.9.4",
