--- a/.github/workflows/booli-daily.yml
+++ b/.github/workflows/booli-daily.yml
@@ -2,7 +2,7 @@ name: Booli Scheduled Crawl
 
 on:
   schedule:
-    - cron: "0 7 * * *"   # 07:00 UTC (~08:00 Sverige)
+    - cron: "0 23 * * *"  # 23:00 UTC (00:00 Sverige)
   workflow_dispatch:
 
 jobs:
