--- a/.github/workflows/booli-daily.yml
+++ b/.github/workflows/booli-daily.yml
@@ -2,7 +2,7 @@ name: Booli Scheduled Crawl
 
 on:
   schedule:
-    - cron: "0 7 * * *"  # 07:00 UTC (08:00/09:00 Sverige)
+    - cron: "0 6,16 * * *"  # 06:00 & 16:00 UTC (07-08 & 17-18 CET)
   workflow_dispatch:
 
 jobs:
