--- a/.github/workflows/booli-daily.yml
+++ b/.github/workflows/booli-daily.yml
@@ -2,7 +2,7 @@ name: Booli Scheduled Crawl
 
 on:
   schedule:
-    - cron: "0 6,16 * * *"  # 06:00 & 16:00 UTC (07-08 & 17-18 CET)
+    - cron: "0 6 * * *"  # Once daily at 06:00 UTC (~07:00 CET) + random 0-60 min delay
   workflow_dispatch:
 
 jobs:
